--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^3.10.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
+    "react-google-maps": "^4.7.1",
     "react-redux": "5.0.7",
     "react-router": "^2.0.1",
     "react-sparklines": "^1.7.0",
